# exp

./: .gitignore  .rgignore  AGENTS.md  CONTRIBUTING.md  README.md  codex_dictation.py  codex_dictation.settings.json  launch_codex_dictation.ahk  requirements-dictation.txt  run_codex_dictation.bat  run_codex_hotkeys.bat  run_codex_terminal.bat
.github/: PULL_REQUEST_TEMPLATE.md
codex-dictation/: README.md  build_codex_dictation_exe.ps1  codex_dictation.py  codex_dictation.settings.json  codex_dictation_app.py  codex_dictation_app_actions.py  codex_dictation_app_commands.py  codex_dictation_app_output.py  codex_dictation_app_runtime.py  codex_dictation_app_status.py  codex_dictation_app_ui.py  codex_dictation_audio.py  codex_dictation_commands.py  codex_dictation_diagnostics.py  codex_dictation_output_state.py  codex_dictation_postedit.py  codex_dictation_settings.py  codex_dictation_targeting.py  codex_dictation_transcription.py  codex_share_safe.py  (+7 more)
meeting-summary-tool/: README.md  TODO.md  pyproject.toml
meeting-summary-tool/docs/: evaluation-plan.md  markdown-format.md  python-v0-architecture.md  stt-spike.md  summary-backend.md
meeting-summary-tool/src/meeting_summary_tool/: __init__.py  cli.py  config.py  models.py  pipeline.py
meeting-summary-tool/src/meeting_summary_tool/diarization/: __init__.py  diarize.py
meeting-summary-tool/src/meeting_summary_tool/io/: __init__.py  audio_loader.py  output_writer.py
meeting-summary-tool/src/meeting_summary_tool/stt/: transcribe.py
meeting-summary-tool/src/meeting_summary_tool/summarize/: __init__.py  backend.py
(+14 files in other folders)
