[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-summary-tool"
version = "0.1.0"
description = "Local-first meeting summary tool prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
meeting-summary-tool = "meeting_summary_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
